# March

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  REFACTOR_SPEC.md  config.yaml  pyproject.toml
docs/: BENCHMARK.md  ORCHESTRATION.md  ROLLING_CONTEXT.md  ROLLING_SUMMARY.md  SUBAGENTS.md  introduction.md  march_deck.md  orchestration.md  quickstart.md  session_memory.md  subagents.md
march/: __init__.py  app.py
march/agents/: protocol.py  registry.py
march/channels/: matrix_channel.py  terminal.py
march/cli/: agent_cmd.py  chat.py  config_cmd.py  guardian_cmd.py  init_cmd.py  log_cmd.py  main.py  plugin_cmd.py  serve.py  skill_cmd.py
march/config/: __init__.py  defaults.py  loader.py  schema.py
march/core/: __init__.py  agent.py  message.py  session.py
march/dashboard/: __init__.py
march/llm/: bedrock.py  openrouter.py  router.py
march/logging/: __init__.py  handlers.py  logger.py
march/memory/: file_memory.py  store.py
march/plugins/: __init__.py  _hooks.py  cost.py  git_context.py  logger_plugin.py  safety.py  ws_proxy.py
march/ser/: __init__.py
march/templates/: TOOLS.md  config.yaml
march/tools/: __init__.py  base.py  registry.py
march/tools/builtin/: clipboard_tool.py  exec_tool.py  file_read.py  file_write.py  glob_tool.py  screenshot_tool.py  sessions_tools.py  translate_tool.py  tts_tool.py  voice_to_text.py  web_fetch.py
march/tools/mcp/: client.py
march/tools/skills/: __init__.py  base.py  loader.py
src/march/: __init__.py  app.py
src/march/agents/: __init__.py  announce.py  guardian.py  ipc.py  manager.py  mp_child.py  mp_runner.py  registry.py  task_queue.py
src/march/channels/: __init__.py  acp.py  base.py  matrix_channel.py  terminal.py  vscode.py  ws_channel.py
src/march/cli/: __init__.py  agent_cmd.py  guardian_cmd.py  init_cmd.py  main.py  memory_cmd.py  start.py
src/march/config/: interpolation.py  loader.py  schema.py
src/march/core/: agent.py  attachments.py  compaction.py  context.py  log_maintenance.py  orchestrator.py  session.py  turn_log.py
src/march/dashboard/: server.py
src/march/llm/: __init__.py  anthropic_provider.py  base.py  litellm_provider.py  ollama.py  openai_provider.py  router.py
src/march/logging/: audit.py  formatters.py  handlers.py  logger.py
src/march/memory/: __init__.py  sqlite_store.py  store.py
src/march/plugins/: _base.py  _manager.py  safety.py  ws_proxy.py
src/march/ser/: adapter.py  plugin.py
src/march/templates/: AGENT.md  MEMORY.md  SYSTEM.md  TOOLS.md  __init__.py  config.yaml
src/march/tools/: base.py  context.py  registry.py
src/march/tools/builtin/: __init__.py  apply_patch.py  browser_tool.py  diff_tool.py  exec_tool.py  file_edit.py  github_tool.py  glob_tool.py  huggingface_tool.py  message_tool.py  pdf_tool.py  process_tool.py  screenshot_tool.py  session_memory_tool.py  sessions_tools.py  voice_to_text.py  web_search.py
src/march/tools/mcp/: __init__.py  discovery.py
tests/: test_acp_integration.py  test_agents.py  test_agents_extended.py  test_app_extended.py  test_attachments.py  test_channels.py  test_channels_extended.py  test_cli.py  test_config.py  test_context_extended.py  test_core.py  test_core_extended.py  test_guardian.py  test_integration.py  test_llm.py  test_llm_router_extended.py  test_logging.py  test_matrix_channel.py  test_memory.py  test_memory_extended.py  test_mp_agent.py  test_orchestrator.py  test_plugins.py  test_plugins_builtin.py  test_plugins_extended.py  test_rolling_context.py  test_session_memory.py  test_session_reset.py  test_skills.py  test_steer.py  test_tools.py  test_turn_log.py  test_ws_proxy.py
